MB-18753: Retain offset of immediately deleted docs

During wal restore, transactional docs are restored based
on the offset in the commit mark doc. For deleted and immediately
purged docs, we need this value to be correct otherwise deleted
and immediately purged transactional docs will be lost on reopen.

Change-Id: Ia01e3fbec1106eb01a896d7709fbd410eaaee708
Reviewed-on: http://review.couchbase.org/61788
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>